<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/contact_black"
    android:paddingHorizontal="20dp"
    android:paddingVertical="40dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_empty_user"
        app:civ_border_color="@color/white"
        app:civ_border_width="3dp"
        app:layout_constraintBottom_toTopOf="@id/edt_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_add_profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:src="@drawable/ic_add_profile"
        app:layout_constraintBottom_toBottomOf="@id/img_profile"
        app:layout_constraintEnd_toEndOf="@id/img_profile" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/dialog_edt_rectangle"
        android:hint="@string/dialog_name_edt"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGray"
        app:layout_constraintBottom_toTopOf="@id/edt_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_profile" />

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/dialog_edt_rectangle"
        android:hint="@string/dialog_phone_edt"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGray"
        app:layout_constraintBottom_toTopOf="@id/edt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_name" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/dialog_edt_rectangle"
        android:hint="@string/dialog_email_edt"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGray"
        app:layout_constraintBottom_toTopOf="@id/edt_locale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_phone" />

    <EditText
        android:id="@+id/edt_locale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/dialog_edt_rectangle"
        android:hint="@string/dialog_locale_edt"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGray"
        app:layout_constraintBottom_toTopOf="@id/edt_ability"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email" />

    <EditText
        android:id="@+id/edt_ability"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/dialog_edt_rectangle"
        android:hint="@string/dialog_ability_edt"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGray"
        app:layout_constraintBottom_toTopOf="@id/chip_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_locale" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:checkedChip="@id/chip_off"
        app:layout_constraintBottom_toTopOf="@id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_ability"
        app:singleLine="false"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_off"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_chip_off"
            android:textColor="@color/black"
            app:chipBackgroundColor="@color/pressed_chip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_5min"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_chip_5_minutes"
            android:textColor="@color/black"
            app:chipBackgroundColor="@color/pressed_chip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_10min"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_chip_10_minutes"
            android:textColor="@color/black"
            app:chipBackgroundColor="@color/pressed_chip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_30min"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_chip_30_minutes"
            android:textColor="@color/black"
            app:chipBackgroundColor="@color/pressed_chip" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@color/contact_yellow"
        android:padding="10dp"
        android:text="@string/dialog_cancel_btn"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@color/contact_yellow"
        android:text="@string/dialog_add_btn"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toTopOf="@id/btn_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>
