<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212832"

    android:orientation="vertical"
    android:padding="0dp">

    <ImageView
        android:id="@+id/login_glide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            >

            <ImageView
                android:id="@+id/logo_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="20dp"
                android:gravity="center"
                android:src="@drawable/login_moving_logo"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_login_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="20dp"


                android:layout_marginTop="26dp"
                android:text="@string/emailaddress"
                android:textColor="#8CAAB9"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo_login"

                />


            <EditText
                android:id="@+id/et_login_id"
                android:layout_width="match_parent"
                android:layout_height="55dp"

                android:layout_marginHorizontal="20dp"
                android:background="#4D455A64"
                android:hint="@string/emailaddress"
                android:inputType="text"
                android:padding="16dp"


                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_login_id"


                />

            <TextView
                android:id="@+id/txt_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="20dp"


                android:layout_marginTop="26dp"
                android:text="@string/password"
                android:textColor="#8CAAB9"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_login_id"


                />

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="32dp"
                android:background="#4D455A64"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_login_password" />

            <TextView
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="60dp"
                android:background="#99FED36A"


                android:gravity="center"

                android:text="@string/logIn"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/buttonSignUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_login_password"


                />

            <TextView
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textSize="20dp"
                android:gravity="center"


                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="26dp"
                android:background="#991F63AA"
                android:textStyle="bold"

                android:text="@string/signUp"


                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/buttonLogin"


                />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>